# pipecat-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  api_client.py  bot.py  bot_config.py  bot_core.py  bot_twilio.py  bot_webrtc.py  checklist.txt  contacts.json  helpers.py  pyproject.toml  server.py  transfer_registry.py
.claude/: settings.json
static/: index.html
