[project]
name = "pipecat-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "pipecat-ai-flows>=1.2.0",
    "pipecat-ai-prebuilt>=1.0.2",
    "pipecat-ai[cartesia,daily,google,rnnoise,silero,webrtc]>=1.3.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
